--- a/m1/w1/d3/start/assets/css/stile.css
+++ b/m1/w1/d3/start/assets/css/stile.css
@@ -55,21 +55,32 @@ figure {
     text-align: center;
 }
 
+/*=========================TRANSIZIONE PER VEDERE MEGLIO LA POSTAZIONE
+                                                INIZIO                 ==============================*/
+
 figure>img {
     border-radius: 25px 50px;
     border: 3px solid rgb(84, 172, 255);
     padding: 8px;
     width: 240px;
     height: 140px;
+    transition: width 2s, height 2s, transform 1s
 }
+
+figure>img:hover {
+    border-radius: 25px 50px;
+    border: 3px solid rgb(84, 172, 255);
+    padding: 8px;
+    width: 340px;
+    height: 240px;
+    transform: rotate(360deg)
+}
+
+/*======================================FINE=============================*/
 
 figure>figcaption {
     margin-top: 10px;
 }
-
-
-
-
 
 blockquote>p {
     border-radius: 25px;
@@ -79,7 +90,6 @@ blockquote>p {
     text-align: center;
 }
 
-
 /* ELEMENTI NEL MAIN */
 
 strong {
@@ -87,43 +97,37 @@ strong {
     ;
 }
 
-mark{
+mark {
     color: white;
-    background-color: rgb(84, 172, 255) ;
+    background-color: rgb(84, 172, 255);
 }
 
-#chiude{
-    background-color: rgb(84, 172, 255) ;
+#chiude {
+    background-color: rgb(84, 172, 255);
     height: 3px;
 }
 
-
-
-
-
-
 /* FOOTER */
 
-
-
-footer{
+footer {
     background: rgba(56, 56, 56, 0.979);
     padding: 0.2rem;
     margin: -8px;
     text-align: center;
 }
-p > kbd{
+
+p>kbd {
     color: yellow;
 }
 
-#curriculum{
+#curriculum {
     color: rgb(255, 60, 0);
 }
 
-footer > p{
+footer>p {
     color: white;
 }
 
-footer > p > small{
+footer>p>small {
     color: rgb(173, 173, 173);
 }
