--- a/m1/w1/d4/start/assets/css/stile.css
+++ b/m1/w1/d4/start/assets/css/stile.css
@@ -250,6 +250,14 @@ input{
 
 /* ELEMENTI NELL' ASIDE */
 
+aside>h2{
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 2rem;
+    padding-top: 1rem;
+}
+
 aside{
     padding-bottom: 1rem;
 }
@@ -259,7 +267,7 @@ aside{
     margin: 2rem;
     text-align: left;
     padding-left: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.9rem;
 }
 
 
