--- a/m1/w1/d5/start/assets/css/stile.css
+++ b/m1/w1/d5/start/assets/css/stile.css
@@ -42,6 +42,11 @@ nav{
 
 #prima-sezione{
     padding: 3rem;
+    margin-bottom: 2rem;
+}
+
+section .subtitle{
+    margin-top: 2rem;
 }
 
 nav p{
