--- a/m1/w1/d5/start/assets/css/stile.css
+++ b/m1/w1/d5/start/assets/css/stile.css
@@ -1,4 +1,3 @@
-
 /* IMPOSTAZIONI GENERALI */
 
 body {
@@ -8,31 +7,34 @@ body {
     line-height: 1.65;
 }
 
-.subtitle{
+.subtitle {
     font-family: 'Montserrat';
     font-weight: bold;
     line-height: 1.5;
     color: #25a2c3;
-    padding: 0.8rem;
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-top: 0.8rem;
+    padding-bottom: 0.2rem;
     text-align: center;
-    
+
 }
 
 
 
 /*==============HEADER==================*/
 
-#logo{
+#logo {
     background-color: black;
     text-align: center;
 }
 
-figure>img{
+figure>img {
     padding: 2.2rem;
     height: 3.5rem;
 }
 
-nav{
+nav {
     text-align: center;
     background: rgb(255, 255, 255);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -40,30 +42,29 @@ nav{
     background-size: 100%;
 }
 
-#prima-sezione{
+#prima-sezione {
     padding: 3rem;
     margin-bottom: 2rem;
 }
 
-section .subtitle:nth-of-type(2){
+section .subtitle:nth-of-type(2) {
     margin-top: 2rem;
 }
 
-nav p{
-    padding-top: 1rem;
-    padding-bottom: 1.2rem;
+nav p {
+    padding-bottom: 2rem;
 }
 
-header h1{
+header h1 {
     padding-top: 3rem;
     padding-bottom: 1rem;
     font-size: 2.4rem;
-    margin-left: 7rem;
-    margin-right: 7rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
 
 }
 
-button{
+button {
     background-color: #f04c2f;
     font-size: 1.2rem;
     border-radius: 5px;
@@ -76,37 +77,38 @@ button #butt>a {
     text-decoration: none;
     padding: 1.8rem;
     text-transform: uppercase;
-    
+
 
 }
+
 /*img max larghezza 100%*/
 
 /*===============================MAIN=============================*/
 
-#rotondo{
-    margin-top: 2rem;
+#rotondo {
     text-align: center;
 }
 
-figure #first-one{
+figure #first-one {
     border-radius: 20rem;
     width: 20rem;
     height: 20rem;
     padding: 3rem;
 
 }
-.paragraph{
+
+.paragraph {
     text-align: center;
-    margin-left:2rem ;
-    margin-right:2rem ;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
-article img{
+article img {
     max-width: 100%;
     border-radius: 0.3rem;
 }
 
-article{
+article {
     text-align: center;
     margin: 3rem;
     background: rgb(255, 255, 255);
@@ -125,7 +127,7 @@ article{
 
 ===*/
 
-#intermezzo{
+#intermezzo {
     background-color: #e22d0e;
     background-image: linear-gradient(200deg, #fbc47e 0%, #e22d0e 100%);
     border-radius: 0.3rem;
@@ -134,34 +136,34 @@ article{
 
 }
 
-#intermezzo p{
+#intermezzo p {
     padding: 1.5rem;
 }
 
-.whiteone{
+.whiteone {
     padding-bottom: 1rem;
-    font-size: 2.4rem;
+    font-size: 2.3rem;
     font-weight: bold;
     font-family: 'Montserrat'
 }
 
-#intermezzo blockquote{
-    padding: 1.2rem;
+#intermezzo blockquote {
+    padding: 0.2rem;
     font-style: italic;
 }
 
-#intermezzo div{
+#intermezzo div {
     font-weight: bold;
 }
 
-#intermezzo span{
+#intermezzo span {
     display: block;
     font-weight: normal;
 }
 
 /*==================================FOOTER=============================*/
 
-footer{
+footer {
     height: 350px;
     background-color: #25a2c3;
     background-image: linear-gradient(200deg, #bae2f5 0%, #25a2c3 100%);
@@ -172,16 +174,15 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    
+
 }
 
-address a{
+address a {
     letter-spacing: 0.1rem;
     display: block;
     color: white;
 }
-address a:nth-of-type(3){
+
+address a:nth-of-type(3) {
     text-decoration: none;
 }
-
-
