--- a/m1/w1/d5/start/assets/css/stile.css
+++ b/m1/w1/d5/start/assets/css/stile.css
@@ -37,7 +37,7 @@ nav {
     background: rgb(255, 255, 255);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-image: url(../images/banner.jpg);
-    background-size: 100%;
+    background-size: cover;
 }
 
 #prima-sezione {
