--- a/m1/w2/d1/start/assets/css/stile.css
+++ b/m1/w2/d1/start/assets/css/stile.css
@@ -1,17 +1,49 @@
 /* IMPOSTAZIONI GENERALI */
-html {font-size: 62.5%;}
-body { 
+
+
+
+html {
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
+
+body {
     font-family: Poppins, 'Helvetica Neue', sans-serif;
     font-size: 1.4rem;
     line-height: 1.5;
     padding: 15px;
     background-image: url('../img/sfondo.png');
     background-position: center center;
+    
 }
 * {box-sizing: border-box;}
 hr {display: none;} /* rimuove l'elemento */
 
-/* BUTTON FIXED */
+* {
+    box-sizing: border-box;
+}
+
+hr {
+    display: none;
+}
+
+/* rimuove l'elemento */
+
+/* BUTTON FIXED ================CODICE AGGIORNATO CON FLEXBOX E ASSESTAMENTO POSIZIONE IN BASSO A DESTRA E RESPONSIVE*/
+
+#buttonref {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: fixed;
+    bottom: 10px;
+    right: 2rem;
+
+}
+
+/* ==================CODICE VECCHIO ===================
+
+
 .toTop {
     position: fixed;
     bottom: 10px;
@@ -22,22 +54,31 @@ hr {display: none;} /* rimuove l'elemento */
     bottom: 20vh;
     right: -7px;
 }
-.toTop a, .social a {
+
+*/
+
+.toTop a,
+.social a {
     color: #c77ea2;
     font-size: 4rem;
     display: block;
 }
-    .social a {
-        color: rgb(45, 101, 185);
-    }
-.toTop .far, .social .far {
-    background: white;
+
+.social a {
+    color: rgb(45, 101, 185);
 }
+
+.toTop .far,
+.social .far {
+    background: rgba(255, 255, 255, 0);
+}
+
+
 
 /* HEADER */
 header {
-    background: rgb(0,160,198);
-    background: linear-gradient(180deg, rgba(0,160,198,1) 0%, rgba(3,109,134,1) 68%);
+    background: rgba(0, 158, 198, 0.8);
+    background: linear-gradient(180deg, rgba(0, 158, 198, 0.9) 0%, rgba(3, 110, 134, 0.8) 68%);
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
@@ -48,28 +89,40 @@ header {
     position: sticky;
     top: 0;
     z-index: 10;
+    
+    
 }
+
+
+
+
 header div img {
     margin-bottom: 20px;
 }
+
 header nav ul {
     margin: 0;
 }
+
 header nav li {
     list-style: none;
     display: inline-block;
     margin-right: 10px;
 }
-    header nav li:last-child {
-        margin-right: 0;
-    }
+
+header nav li:last-child {
+    margin-right: 0;
+}
+
 header nav li a {
     color: white;
     text-decoration: none;
 }
+
 header nav li a:hover {
     color: red;
 }
+
 header nav li a::before {
     content: "\22c6\0020";
 }
@@ -79,14 +132,16 @@ main {
     background-color: #fff;
     box-shadow: 0 3px 3px #444;
     padding: 2em 1em;
-    margin-bottom:1.5em ;
+    margin-bottom: 1.5em;
 }
-section { 
+
+section {
     background-color: #e3e3e3;
     padding: 2.5em 1em 1em;
     margin-bottom: 2em;
     position: relative;
 }
+
 section h2 {
     text-align: center;
     color: #333;
@@ -110,12 +165,20 @@ h1 {
     letter-spacing: -0.03em;
     margin-bottom: 0.7em;
 }
-p, address, ul, ol, dl, blockquote {
+
+p,
+address,
+ul,
+ol,
+dl,
+blockquote {
     margin-bottom: 1.2em;
 }
-h1 + p {
+
+h1+p {
     color: #a0a0a0;
 }
+
 .imgLeft {
     float: left;
     margin-right: 20px;
@@ -123,27 +186,34 @@ h1 + p {
     outline: 4px solid #a02571;
     padding: 3px;
 }
+
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
-  }
-ul, ol {
+}
+
+ul,
+ol {
     margin-left: 2em;
 }
+
 a {
     color: #00A0C6;
     font-weight: bold;
 }
+
 strong {
     color: #a02571;
     font-weight: bold;
 }
+
 code {
     background-color: #e3e3e3;
     border: 1px solid #969494;
     border-radius: 5px;
 }
+
 iframe {
     width: 100%;
     height: auto;
@@ -152,22 +222,31 @@ iframe {
 }
 
 /* TABELLE */
+
+
 table {
-    margin-bottom: 2em;
+    margin: 0 auto 2em;
+
+    
 }
+
 caption {
     font-weight: bold;
     font-style: italic;
 }
+
 thead tr {
     background-color: #3f6bca;
     color: #ffffff;
 }
-th, td {
+
+th,
+td {
     padding: 12px 15px;
     vertical-align: bottom;
     text-align: center;
 }
+
 tbody tr {
     border-bottom: 1px solid #dddddd;
 }
@@ -186,6 +265,7 @@ input {
     border: 0;
     border-bottom: 1px dashed #333;
 }
+
 button {
     padding: 4px 7px;
     background-color: #3f6bca;
@@ -203,12 +283,14 @@ aside h2 {
     text-transform: uppercase;
     margin-bottom: 1em;
 }
+
 aside div {
     background-color: #e3e3e3;
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
     padding: 1em;
 }
+
 aside div p:last-child {
     margin-bottom: 0;
     font-size: 0.8em;
@@ -218,14 +300,15 @@ aside div p:last-child {
 
 /* FOOTER */
 footer {
-    background: rgb(53,53,53);
-    background: linear-gradient(0deg, rgba(53,53,53,1) 0%, rgba(5,85,103,1) 68%);
+    background: rgb(53, 53, 53);
+    background: linear-gradient(0deg, rgba(53, 53, 53, 1) 0%, rgba(5, 85, 103, 1) 68%);
     box-shadow: 0 3px 3px #444;
     color: #f0f0f0;
     padding: 1em;
     text-align: center;
     font-size: 1.2rem;
 }
+
 footer a {
     color: fuchsia;
 }
