--- a/m1/w2/d1/start/assets/css/stile.css
+++ b/m1/w2/d1/start/assets/css/stile.css
@@ -36,8 +36,9 @@ hr {
     flex-direction: column;
     align-items: flex-start;
     position: fixed;
-    bottom: 10px;
-    right: 2rem;
+    top: 50%;
+    bottom: 50%;
+    right: 2.2rem;
 
 }
 
