--- a/m1/w2/d1/start/assets/css/responsive.css
+++ b/m1/w2/d1/start/assets/css/responsive.css
@@ -72,31 +72,7 @@
     }
 
 
-    header{
-        display: none;
-    }
-
-    iframe{
-        display: none;
-    }
-
-    .news{
-        display: none;
-    }
-
-    aside{
-        display: none;
-    }
-
-    footer{
-        display: none;
-    }
-
-    .social{
-        display: none;
-    }
-
-    .toTop{
+    header, iframe, .news, aside, footer, .social, .toTop{
         display: none;
     }
 
