patch li sottomenu

--- a/m1/w2/d2/menu/css/style.css
+++ b/m1/w2/d2/menu/css/style.css
@@ -55,13 +55,16 @@
 }
 
 #menu li>ul {
-    display: none;
+    height: 0;
     position: absolute;
     background-color: green;
+    width: 200px;
+    transition: 0.3s;
 
 }
 
 #menu li:hover>ul {
     display: block;
+    height: 150px;
 
 }
