--- a/m1/w2/d3/start/assets/css/stile.css
+++ b/m1/w2/d3/start/assets/css/stile.css
@@ -25,6 +25,20 @@ body {
             justify-content: space-evenly ;
             width: 100%;
         }
+        .aside-title{
+            display: none;
+           
+        
+        }
+        .aside-title-query{
+            font-size: 2rem;
+            font-weight: bold;
+            text-align: center;
+            margin: 1rem;
+        }
+
+
+       
     }
 
     @media screen and (min-width:700px) {
@@ -51,12 +65,12 @@ hr {display: none;} /* rimuove l'elemento */
 .toTop {
     position: fixed;
     bottom: 10px;
-    right: -7px;
+    right: 1.4rem;
 }
 .social {
     position: fixed;
     bottom: 20vh;
-    right: -7px;
+    right: 1.4rem;
 }
 .toTop a, .social a {
     color: #c77ea2;
@@ -85,17 +99,47 @@ header {
     top: 0;
     z-index: 10;
 }
-@media screen and (min-width:800px) {
-    header {
-        padding: 1.3em;
-    }
-}
 
 @media screen and (min-width:800px) {
         header {
             padding: 1em;
         }
+        .box-aside{
+            float: right;
+            flex-direction: column;
+            max-width: 35%;
+            justify-content: start ;
+            overflow: hidden; 
+        }
+
+        main{
+            display: flex;
+            
+        }
+
+        table{
+            position: relative;
+            min-width: 60%;
+            left: 20%;
+            z-index: 2 ;
+        }
+
+        .aside-title-query{
+            display: none;
+        }
+
+        .aside-title{
+            display: inline;
+        }
+        .quary-otto{
+            position: relative;
+            min-width: 60%;
+            left: 20%;
+        }
+      
+
     }
+
 header div img {
     margin-bottom: 20px;
 }
