--- a/m1/w2/d3/start/assets/css/stile.css
+++ b/m1/w2/d3/start/assets/css/stile.css
@@ -81,7 +81,8 @@ hr {display: none;} /* rimuove l'elemento */
         color: rgb(45, 101, 185);
     }
 .toTop .far, .social .far {
-    background: white;
+    background: rgb(255, 255, 255);
+    border-radius: 0.5rem;
 }
 
 /* HEADER */
@@ -99,13 +100,19 @@ header {
     top: 0;
     z-index: 10;
 }
+header>div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+ 
+}
 
 @media screen and (min-width:800px) {
         header {
             padding: 1em;
         }
         .box-aside{
-            float: right;
             flex-direction: column;
             max-width: 35%;
             justify-content: start ;
@@ -115,13 +122,6 @@ header {
         main{
             display: flex;
             
-        }
-
-        table{
-            position: relative;
-            min-width: 60%;
-            left: 20%;
-            z-index: 2 ;
         }
 
         .aside-title-query{
