--- a/m1/w2/d3/start-grid/assets/css/stile.css
+++ b/m1/w2/d3/start-grid/assets/css/stile.css
@@ -1,3 +1,50 @@
+
+@media screen  and (min-width:522px){
+
+    
+
+.container{
+    display: grid;
+}
+
+.container article{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 10;
+}
+
+.container aside{
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    margin-left: 1rem;
+    
+}
+
+.container .newss{
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 3;
+    grid-row-end: 7;
+    padding: 1rem;
+    margin-left: 1rem;
+    border: 1px solid #c3c3c3;
+    border-radius: 1.5rem;
+    position: sticky;
+    top: 25rem;
+
+}
+
+
+
+}
+
+
+
+
+
 /* IMPOSTAZIONI GENERALI */
 html {font-size: 62.5%;}
 body { 
@@ -13,8 +60,8 @@ hr {display: none;} /* rimuove l'elemento */
 
 /* HEADER */
 header {
-    background: rgb(0,160,198);
-    background: linear-gradient(180deg, rgba(0,160,198,1) 0%, rgba(3,109,134,1) 68%);
+    background: rgba(0, 158, 198, 0.9);
+    background: linear-gradient(180deg, rgba(0,160,198,0.9) 0%, rgba(3,109,134,0.9) 68%);
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
@@ -22,6 +69,9 @@ header {
     box-shadow: 0 3px 3px #444;
     margin-bottom: 1.5em;
     padding: 2em 1.5em;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 header div img {
     margin-bottom: 20px;
@@ -157,6 +207,7 @@ aside div {
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
     padding: 1em;
+    border-radius: 1.5rem;
 }
 aside div p:last-child {
     margin-bottom: 0;
