patch column reverse

--- a/m1/w2/d3/start-flexbox/assets/css/stile.css
+++ b/m1/w2/d3/start-flexbox/assets/css/stile.css
@@ -1,6 +1,9 @@
 /* IMPOSTAZIONI GENERALI */
-html {font-size: 62.5%;}
-body { 
+html {
+    font-size: 62.5%;
+}
+
+body {
     font-family: Poppins, 'Helvetica Neue', sans-serif;
     font-size: 1.4rem;
     line-height: 1.5;
@@ -8,28 +11,33 @@ body {
     background-image: url('../img/sfondo.png');
     background-position: center center;
 }
-    @media screen and (min-width:500px) {
-        html {
-            font-size: 70%;
-        }
-        body {
-            line-height: 1.8;
-        }
-        .box-aside div{
-            display: block;
-            margin-left: 5px;
-        }
 
-        .box-aside { 
-            display: flex;
-            justify-content: space-evenly ;
-            width: 100%;
-        }
+@media screen and (min-width:500px) {
+    html {
+        font-size: 70%;
+    }
+
+    body {
+        line-height: 1.8;
+    }
+
+   
+    #asidecont div{
+        flex: 1,1,auto;
+        margin-left: 5px;
+    }
+
+    #asidecont {
+        display: flex;
+        justify-content: space-evenly;
+
+    }
+
+    /*
         .aside-title{
             display: none;
-           
-        
         }
+        
         .aside-title-query{
             font-size: 2rem;
             font-weight: bold;
@@ -37,29 +45,39 @@ body {
             margin: 1rem;
         }
 
+*/
 
-       
+}
+
+@media screen and (min-width:700px) {
+    html {
+        font-size: 80%;
     }
 
-    @media screen and (min-width:700px) {
-        html {
-            font-size: 80%;
-        }
-        body {
-            line-height: 2;
-        }
+    body {
+        line-height: 2;
     }
-    @media screen and (min-width:1200px) {
-        html {
-            font-size: 100%;
-        }
-        body {
-            line-height: 2.4;
-        }
+}
+
+@media screen and (min-width:1200px) {
+    html {
+        font-size: 100%;
     }
 
-* {box-sizing: border-box;}
-hr {display: none;} /* rimuove l'elemento */
+    body {
+        line-height: 2.4;
+    }
+}
+
+* {
+    box-sizing: border-box;
+}
+
+hr {
+    display: none;
+}
+
+/* rimuove l'elemento */
 
 /* BUTTON FIXED */
 .toTop {
@@ -67,28 +85,34 @@ hr {display: none;} /* rimuove l'elemento */
     bottom: 10px;
     right: 1.4rem;
 }
+
 .social {
     position: fixed;
     bottom: 20vh;
     right: 1.4rem;
 }
-.toTop a, .social a {
+
+.toTop a,
+.social a {
     color: #c77ea2;
     font-size: 4rem;
     display: block;
 }
-    .social a {
-        color: rgb(45, 101, 185);
-    }
-.toTop .far, .social .far {
+
+.social a {
+    color: rgb(45, 101, 185);
+}
+
+.toTop .far,
+.social .far {
     background: rgb(255, 255, 255);
     border-radius: 0.5rem;
 }
 
 /* HEADER */
 header {
-    background: rgb(0,160,198);
-    background: linear-gradient(180deg, rgba(0,160,198,1) 0%, rgba(3,109,134,1) 68%);
+    background: rgb(0, 160, 198);
+    background: linear-gradient(180deg, rgba(0, 160, 198, 1) 0%, rgba(3, 109, 134, 1) 68%);
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
@@ -100,67 +124,63 @@ header {
     top: 0;
     z-index: 10;
 }
-header>div{
+
+header>div {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
- 
+
 }
 
 @media screen and (min-width:800px) {
-        header {
-            padding: 1em;
-        }
-        .box-aside{
-            flex-direction: column;
-            max-width: 35%;
-            justify-content: start ;
-            overflow: hidden; 
-        }
+    header {
+        padding: 1em;
+    }
 
-        main{
-            display: flex;
-            
-        }
+    #asidecont {
+        flex-direction: column-reverse;
+        max-width: 100%;
+        justify-content: space-between;
+ 
+    }
 
-        .aside-title-query{
-            display: none;
-        }
-
-        .aside-title{
-            display: inline;
-        }
-        .quary-otto{
-            position: relative;
-            min-width: 60%;
-            left: 20%;
-        }
-      
+    main {
+        display: inline-flex;
 
     }
+
+
+
+}
 
 header div img {
     margin-bottom: 20px;
 }
+
 header nav ul {
     margin: 0;
 }
+
 header nav li {
     list-style: none;
     display: inline-block;
     margin-right: 10px;
 }
-    header nav li:last-child {
-        margin-right: 0;
-    }
+
+header nav li:last-child {
+    margin-right: 0;
+}
+
 header nav li a {
     color: white;
     text-decoration: none;
 }
+
 header nav li a:hover {
     color: red;
 }
+
 header nav li a::before {
     content: "\22c6\0020";
 }
@@ -170,20 +190,22 @@ main {
     background-color: #fff;
     box-shadow: 0 3px 3px #444;
     padding: 2em 1em;
-    margin-bottom:1.5em ;
+    margin-bottom: 1.5em;
 }
-    @media screen and (min-width:700px) {
-        main {
-            padding: 2em;
-        }
-    }
 
-section { 
+@media screen and (min-width:700px) {
+    main {
+        padding: 2em;
+    }
+}
+
+section {
     background-color: #e3e3e3;
     padding: 2.5em 1em 1em;
     margin-bottom: 2em;
     position: relative;
 }
+
 section h2 {
     text-align: center;
     color: #333;
@@ -207,12 +229,20 @@ h1 {
     letter-spacing: -0.03em;
     margin-bottom: 0.7em;
 }
-p, address, ul, ol, dl, blockquote {
+
+p,
+address,
+ul,
+ol,
+dl,
+blockquote {
     margin-bottom: 1.2em;
 }
-h1 + p {
+
+h1+p {
     color: #a0a0a0;
 }
+
 .imgLeft {
     float: left;
     margin-right: 20px;
@@ -220,27 +250,34 @@ h1 + p {
     outline: 4px solid #a02571;
     padding: 3px;
 }
+
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
-  }
-ul, ol {
+}
+
+ul,
+ol {
     margin-left: 2em;
 }
+
 a {
     color: #00A0C6;
     font-weight: bold;
 }
+
 strong {
     color: #a02571;
     font-weight: bold;
 }
+
 code {
     background-color: #e3e3e3;
     border: 1px solid #969494;
     border-radius: 5px;
 }
+
 iframe {
     width: 100%;
     height: auto;
@@ -252,30 +289,36 @@ iframe {
 table {
     margin-bottom: 2em;
 }
-    @media screen and (min-width:500px) {
-        table {
-            margin: 0 auto 2em;
-        }
+
+@media screen and (min-width:500px) {
+    table {
+        margin: 0 auto 2em;
     }
-    @media screen and (min-width:700px) {
-        table {
-            width: 70%;
-        }
+}
+
+@media screen and (min-width:700px) {
+    table {
+        width: 70%;
     }
+}
 
 caption {
     font-weight: bold;
     font-style: italic;
 }
+
 thead tr {
     background-color: #3f6bca;
     color: #ffffff;
 }
-th, td {
+
+th,
+td {
     padding: 12px 15px;
     vertical-align: bottom;
     text-align: center;
 }
+
 tbody tr {
     border-bottom: 1px solid #dddddd;
 }
@@ -294,6 +337,7 @@ input {
     border: 0;
     border-bottom: 1px dashed #333;
 }
+
 button {
     padding: 4px 7px;
     background-color: #3f6bca;
@@ -301,20 +345,23 @@ button {
     color: white;
     font-weight: bold;
 }
-    @media screen and (min-width:500px) {
-        input {
-            display: inline-block;
-            width: 70%;
-        }
+
+@media screen and (min-width:500px) {
+    input {
+        display: inline-block;
+        width: 70%;
     }
-    @media screen and (min-width:700px) {
-        input {
-            padding: 15px;
-        }
-        button {
-            padding: 15px 30px;
-        }
+}
+
+@media screen and (min-width:700px) {
+    input {
+        padding: 15px;
     }
+
+    button {
+        padding: 15px 30px;
+    }
+}
 
 /* ELEMENTI NELL' ASIDE */
 aside h2 {
@@ -325,12 +372,14 @@ aside h2 {
     text-transform: uppercase;
     margin-bottom: 1em;
 }
-aside div {
+
+#asidecont div {
     background-color: #e3e3e3;
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
     padding: 1em;
 }
+
 aside div p:last-child {
     margin-bottom: 0;
     font-size: 0.8em;
@@ -340,19 +389,20 @@ aside div p:last-child {
 
 /* FOOTER */
 footer {
-    background: rgb(53,53,53);
-    background: linear-gradient(0deg, rgba(53,53,53,1) 0%, rgba(5,85,103,1) 68%);
+    background: rgb(53, 53, 53);
+    background: linear-gradient(0deg, rgba(53, 53, 53, 1) 0%, rgba(5, 85, 103, 1) 68%);
     box-shadow: 0 3px 3px #444;
     color: #f0f0f0;
     padding: 1em;
     text-align: center;
     font-size: 1.2rem;
 }
-    @media screen and (min-width:800px) {
-        footer {
-            padding: 1em 12em;
-        }
+
+@media screen and (min-width:800px) {
+    footer {
+        padding: 1em 12em;
     }
+}
 
 footer a {
     color: fuchsia;
@@ -360,8 +410,11 @@ footer a {
 
 
 @media screen and (min-width:1200px) {
-    header, main, footer {
-        max-width: 1200px;
+
+    header,
+    main,
+    footer {
+     
         margin-left: auto;
         margin-right: auto;
     }
@@ -372,17 +425,24 @@ footer a {
         font-size: 24px;
         padding: 0;
         background-image: none;
-    
+
     }
+
     main {
         box-shadow: none;
         margin: 0;
     }
+
     th {
         background-color: #d3d3d3;
     }
-    header, article section, aside, footer, .social, .toTop {
+
+    header,
+    article section,
+    aside,
+    footer,
+    .social,
+    .toTop {
         display: none;
     }
 }
-
