--- a/m1/w2/d4/animation/css/style.css
+++ b/m1/w2/d4/animation/css/style.css
@@ -4,7 +4,8 @@
     perspective: 400px;
     overflow: hidden;
     transform-style: preserve-3d;
-    will-change: transform; /*prepara il browser ad una trasformazione per un rendering migliore*/
+    will-change: transform;
+    /*prepara il browser ad una trasformazione per un rendering migliore*/
 }
 
 .quadrato {
@@ -80,6 +81,7 @@
         background-color: red;
     }
 }
+
 #n4 {
     animation-name: animazione4;
     animation-duration: 5s;
@@ -87,11 +89,21 @@
     animation-timing-function: ease-in-out;
 
 }
-@keyframes animazione4{
-    0% {margin-left: 0;}
-    50% {margin-left:90%;}
-    100% {margin-left:0;}
-} 
+
+@keyframes animazione4 {
+    0% {
+        margin-left: 0;
+    }
+
+    50% {
+        margin-left: 90%;
+    }
+
+    100% {
+        margin-left: 0;
+    }
+}
+
 #n5 {
     animation-name: animazione5;
     animation-duration: 5s;
@@ -100,11 +112,22 @@
     transform: translateZ(-200px);
 
 }
-@keyframes animazione5{
-    0% {margin-left: 0;}
-    50% {margin-left:90%;}
-    100% {margin-left:0;}
-} #n5 {
+
+@keyframes animazione5 {
+    0% {
+        margin-left: 0;
+    }
+
+    50% {
+        margin-left: 90%;
+    }
+
+    100% {
+        margin-left: 0;
+    }
+}
+
+#n5 {
     animation-name: animazione5;
     animation-duration: 5s;
     animation-iteration-count: infinite;
@@ -112,7 +135,8 @@
     transform: translateZ(-200px);
 
 }
-@keyframes animazione5{
+
+@keyframes animazione5 {
     0% {
         transform: translatez(0%, 0%) rotate(0);
         background-color: red,
@@ -124,7 +148,7 @@
     }
 
     75% {
-        transform: translatez(-80%, -50%) ;
+        transform: translatez(-80%, -50%);
         background-color: wheat;
     }
 
@@ -132,4 +156,65 @@
         transform: translate(0%, 0%);
         background-color: red;
     }
-} 
+}
+
+/*==============ESPERIMENTO================*/
+
+#area-trasformazione{
+    perspective: 1000px;
+    height: 100vh;
+    transform-style: preserve-3d;
+
+}
+#cubo{
+    position: relative;
+    margin-left: 200px;
+    margin-top: 200px;
+    height: 200px;
+    width: 200px;
+    transform-style: preserve-3d;
+    animation-name: cubo;
+    animation-iteration-count: infinite;
+    animation-duration: 20s;
+
+}
+@keyframes cubo{
+ 0%{transform: ;}
+ 50%
+ 100%
+
+}
+
+.faccia{
+    background-color: lightgray;
+    width: 200px;
+    height: 200px ;
+    position: absolute;
+    border: 1px solid black;
+
+}
+
+#sx{
+    left: 200px;
+    transform: rotateY(90deg);
+    transform-origin: right;
+}
+#dx{
+    right: -200px;
+    transform: rotateY(-90deg);
+    transform-origin: left;
+}
+#top{
+    top: -200px;
+    transform: rotateX(-90deg);
+    transform-origin: bottom;
+}
+#bottom{
+    bottom: -200px;
+    transform: rotateX(90deg);
+    transform-origin: top;
+}
+#rear{
+    background-color: grey;
+
+}
