--- a/m1/w2/d5/start/assets/css/responsive.css
+++ b/m1/w2/d5/start/assets/css/responsive.css
@@ -48,11 +48,16 @@
     #table-tabdsk{
         display: none;
     }
+    #maps{
+        display: none;
+    }
+    
 }
 @media screen and (max-width: 767px){
     #titolo-contattimb{
         display: none;
     } 
+    
 }
 /*=================TABLET==================================*/
 @media screen and (min-width: 768px){
